# moodle-exam-miner

./: .gitignore  Procfile  README.md  app.py  dashboard_functions.py  df_final.xlsx  df_line_chart.xlsx  index.py  my_app.py  pyproject.toml  requirements.txt  run_plotly.py  setup.cfg  tox.ini
apps/: hello.py  result.py
files/tool_input/: exam_questions_set.xml
scripts/: 00_input_coding_to_utf8.py  01_anonymize_input.py  02_questions.py  03_answers_and_califications_dataframe.py  04_answer_times.py  05_answers_and_questions_cleaned.py  06_py_collaborator_outputs.py  07_acumulated_knowladge.py  08_student_exam_logs.py  09_questions_mining.py  10_questions_mining_graphics.py
scripts/graph_functions/: functions_for_clusters.py
scripts/script0/: input_coding_to_utf8.py
scripts/script1/: anonymize_input.py
scripts/script10/: questions_mining_graphics.py
scripts/script2/: questions.py
scripts/script3/: answers_and_califications_dataframe.py
scripts/script4/: answer_times.py
scripts/script5/: answers_and_questions_cleaned.py
scripts/script6/: py_collaborator_outputs.py
scripts/script7/: acumulated_knowladge.py
scripts/script8/: student_exam_logs.py
scripts/script9/: questions_mining.py
scripts/script_dashboard/: questions_chart.py  scatter_plot.py  students_clusters.py
tests/: fixtures_global_anonimizados.py  pytest.ini  test_acumulated_knowladge.py  test_anonymizer.py  test_answer_times.py  test_answers_and_marks.py  test_pycollaborator.py  test_xml_file.py
web/: README.md  graph_fig_estudiantes.py  graph_scatter_plot.py
(+40 files in other folders)
