[metadata]
name = moodle_exam_miner
description = Tool that reads Moodle JSON exam files and return a helpful and easy to understand information.
author = Federico Carrillo-Chaves
license = GPLv3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = moodle_exam_miner

install_requires =
    dash>=2.0.0
    dash-core-components>=2.0.0
    dash-html-components>=2.0.0
    dash-table>=5.0.0
    Flask>=2.0.2
    Flask-Bootstrap>=3.3.7.1
    flask-nav>=0.6
    gunicorn>=20.1.0
    Jinja2>=3.0.3
    matplotlib>=3.5.1
    numpy>=1.22.1
    openpyxl>=3.0.9
    pandas>=1.4.0
    pandas-read-xml>=0.3.1
    plotly>=5.5.0
    statsmodels>=0.13.1
    pytest>=6.2.5

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
moodle_exam_miner = py.typed

[flake8]
max-line-length = 160